WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169150
Media: notify clients when the user never plays a media element that was prevented from auto-playing
https://bugs.webkit.org/show_bug.cgi?id=169150
Summary
Media: notify clients when the user never plays a media element that was prev...
Matt Rajca
Reported
2017-03-03 14:20:29 PST
Media: notify clients in the form of auto-play events when the user never plays a media element that was prevented from auto-playing.
Attachments
Patch
(6.26 KB, patch)
2017-03-03 14:28 PST
,
Matt Rajca
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Rajca
Comment 1
2017-03-03 14:28:49 PST
Created
attachment 303342
[details]
Patch
Matt Rajca
Comment 2
2017-03-07 11:39:32 PST
r213471
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug