Media: notify clients when the user never plays a media element that was prevented from auto-playing https://bugs.webkit.org/show_bug.cgi?id=169150

Reviewed by Alex Christensen.

Source/WebCore:

Added API tests.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerTimeChanged):
(WebCore::HTMLMediaElement::stopWithoutDestroyingMediaPlayer):
* page/AutoplayEvent.h:

Source/WebKit2:

* UIProcess/API/C/WKPageUIClient.h:

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/WebsitePolicies.mm:
(TEST): Added.

Canonical link: https://commits.webkit.org/186235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213471 268f45cc-cd09-0410-ab3c-d52691b4dbfc